--- a/templates/news/index.html
+++ b/templates/news/index.html
@@ -1,23 +1,15 @@
-<!DOCTYPE html>
-<html lang="ru">
+{% extends 'news/base.html' %}
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-  <title>MakarNews</title>
-</head>
-
-<body>
-  <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-    <h5 class="my-0 mr-md-auto font-weight-normal">MakarNews</h5>
-    <nav class="my-2 my-md-0 mr-md-3">
-      <a class="p-2 text-dark" href="/">Новости</a>
-      <a class="p-2 text-dark" href="about">О нас</a>
-    </nav>
-    <a class="btn btn-outline-primary" href="#">Регистрация</a>
-    <a class="btn btn-outline-primary ml-3" href="#">Войти</a>
-  </div>
-</body>
-
-</html>
+{% block title %}Новости{% endblock %}
+{% block content %}
+    {% for post in a %}
+    <div class="post">
+        <h1>{{ post.title }}</a></h1>
+        <p>{{ post.text|linebreaksbr }}</p>
+        <div class="date">
+            {{ post.pub_date }}
+          </div>
+      </div>
+      <hr>
+    {% endfor %}
+{% endblock %}
